--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -24,7 +24,7 @@
 
     <div class="catalog-header">
         <div class="container">
-            <h1 th:text="${header}"></h1>
+            <h1>Главная</h1>
         </div>
     </div>
 
@@ -33,18 +33,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-xs-3" th:each="game :${games}" style="margin-bottom: 30px">
-
                     <div th:insert="fragments/gameCard :: item(${game})"></div>
-
                 </div>
 
             </div>
         </div>
     </div>
-
-    <div id="example">
-    </div>
-
 
     <div class="show-more">
         <div class="container">
